# example

./: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md
fold_expression/: CMakeLists.txt  main.cpp
function_call/: CMakeLists.txt  main.cpp  processor.cpp  processor.h
